--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "dependencies": {
     "@influxdata/influxdb-client": "^1.35.0",
     "@prisma/client": "^6.19.0",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "express-rate-limit": "^8.2.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.555.0",
     "neo4j-driver": "^6.0.1",
     "next": "16.0.3",
+    "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
     "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "recharts": "^3.5.1",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
